# carbonator

./: .gitignore  CMakeLists.txt  Carbonator_User_Manual.md  IMPLEMENTATION_COMPLETE.md  README.md  VISUAL_EFFECTS_COMPLETE.md  distribute.sh
.github/workflows/: build-windows.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: EffectsChain.cpp  EffectsChain.h  FizzCurves.h  FlavorProcessor.cpp  FlavorProcessor.h  LowPassFilter.cpp  LowPassFilter.h  SaturationEngine.cpp  SaturationEngine.h
Source/Licensing/: ActivationDialog.cpp  LicenseManager.cpp  LicenseManager.h
Source/Parameters/: ParameterFactory.cpp  ParameterFactory.h  ParameterIDs.h
Source/UI/: SodaPanel.cpp  SodaPanel.h
Source/UI/Components/: CarbonatedToggle.cpp  CarbonatedToggle.h  FizzKnob.cpp  FizzKnob.h  FlavorSelector.cpp  FlavorSelector.h
Source/UI/LookAndFeel/: ColorScheme.cpp  ColorScheme.h  SodaLookAndFeel.cpp  SodaLookAndFeel.h
installer/windows/: carbonator.iss
